--- a/taskmanager/templates/add_task.html
+++ b/taskmanager/templates/add_task.html
@@ -52,9 +52,7 @@
                 <select id="category_id" name="category_id" class="validate" required>
                     <option value="" disabled selected>Choose Category</option>
                     {% for category in categories %}
-                    <option value="{{ category.id }}">{{ category.category_name }}
-
-                    </option>
+                    <option value="{{ category.id }}">{{ category.category_name }}></option>
                     {% endfor %}
                 </select>
                 <label for="category_id">Category</label>
